# cpp_bazel_module_load_playground

./: BUILD.bazel  WORKSPACE  lib1.cc  lib2.cc  main  main.cc  riley-celebrate.BUILD  riley-riley.BUILD
bazel/: repositories.bzl
riley/: riley.cc  riley.h
riley-celebrate/: riley.cc  riley.h
